# mn-rs

./: .gitignore  Cargo.toml
.sqlx/: query-59d1062bc08e6d620e42502b3c9b1f9c1349b8138be5208d4263fdf3e0c35c66.json
src/: db.rs  formatting.rs  lang.rs  main.rs  translation.rs  util.rs
