[package]
name = "mn-rs"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
grammers-client = { path =  "../grammers/lib/grammers-client", features=["html"] }
grammers-session = { path = "../grammers/lib/grammers-session"}
grammers-mtsender =  { path ="../grammers/lib/grammers-mtsender"}
grammers-tl-types =  { path = "../grammers/lib/grammers-tl-types"}
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
deepl = "0.5.1"

chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"

tokio-stream = { version = "0.1.14", features = ["sync"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

deep-translator = "0.8.0"
reqwest = "0.11.24"
scraper = "0.18.1"

thiserror = "1.0.57"
anyhow = "1.0.80"

include_dir= { version = "0.7.3", features = ["glob"] }
serde_yaml = "0.9.32"
regex = "1.10.3"
once_cell = "1.19.0"
lazy_static = "1.4.0"
