[package]
name = "mn-rs"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
grammers-client = { path =  "../grammers/lib/grammers-client", features=["html"] }
grammers-session = { path = "../grammers/lib/grammers-session"}
grammers-mtsender =  { path ="../grammers/lib/grammers-mtsender"}
grammers-tl-types =  { path = "../grammers/lib/grammers-tl-types"}
tokio = { version = "1.38.0", features = ["full"] }
dotenv = "0.15.0"
deepl = "0.6.3"

chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_with = "3.8.1"

tokio-stream = { version = "0.1.15", features = ["sync"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

deep-translator = "0.8.0"
reqwest = "0.12.5"
scraper = "0.19.0"

thiserror = "1.0.61"
anyhow = "1.0.86"

include_dir= { version = "0.7.4", features = ["glob"] }
serde_yaml = "0.9.34"
regex = "1.10.5"
once_cell = "1.19.0"
lazy_static = "1.5.0"

time="0.3.36"
