[package]
name = "mn-rs"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
#panic = "abort"

[dependencies]
grammers-client = { path = "../grammers/lib/grammers-client", features = ["html"] }
grammers-session = { path = "../grammers/lib/grammers-session" }
grammers-mtsender = { path = "../grammers/lib/grammers-mtsender" }
grammers-tl-types = { path = "../grammers/lib/grammers-tl-types" }
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
deepl = "0.6.4"

chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"

tokio-stream = { version = "0.1.16", features = ["sync"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

deep-translator = "0.8.0"
reqwest = "0.12.7"
scraper = "0.20.0"

thiserror = "1.0.63"
anyhow = "1.0.87"

include_dir = { version = "0.7.4", features = ["glob"] }
serde_yml = "0.0.12"
regex = "1.10.6"
once_cell = "1.19.0"
lazy_static = "1.5.0"

time = "0.3.36"